syntax = "proto3";
package org.spoom.im.sdk.server.model.proto;
option java_outer_classname = "RequestMsgProto";
message RequestMsg {
    int64 msgId = 1;
    int32 chatType = 2;
    string body = 3;
    string from = 4;
    string to = 5;
    int64 time = 6;
}